--- a/javascript/如何解决前端内存泄漏.md
+++ b/javascript/如何解决前端内存泄漏.md
@@ -4,13 +4,15 @@
 
 ### 引起内存泄漏的原因
 
-#### 1、意外的全局变量引起的内存泄漏。
+#### 1、意外的全局变量
+
+由于 js 对未声明变量的处理方式是在全局对象上创建该变量的引用。如果在浏览器中，全局对象就是 window 对象。变量在窗口关闭或重新刷新页面之前都不会被释放，如果未声明的变量缓存大量的数据，就会导致内存泄露。
 
 - 未声明变量
 
 ```js
 function fn() {
-  a = "Actually, I'm a global variable"
+  a = 'global variable'
 }
 fn()
 ```
@@ -19,7 +21,7 @@ fn()
 
 ```js
 function fn() {
-  this.a = "Actually, I'm a global variable"
+  this.a = 'global variable'
 }
 fn()
 ```
@@ -31,7 +33,7 @@ fn()
 
 #### 2、闭包引起的内存泄漏
 
-原因：闭包可以维持函数内局部变量，使其得不到释放。
+原因：闭包可以读取函数内部的变量，然后让这些变量始终保存在内存中。如果在使用结束后没有将局部变量清除，就可能导致内存泄露。
 
 ```JS
 function fn () {
@@ -42,7 +44,29 @@ function fn () {
 }
 ```
 
-解决：将事件处理函数定义在外部，解除闭包，或者在定义事件处理函数的外部函数中，删除对 dom 的引用。
+解决：将事件处理函数定义在外部，解除闭包，或者在定义事件处理函数的外部函数中。
+
+比如：在循环中的函数表达式，能复用最好放到循环外面。
+
+```js
+// bad
+for (var k = 0; k < 10; k++) {
+  var t = function (a) {
+    // 创建了10次  函数对象。
+    console.log(a)
+  }
+  t(k)
+}
+
+// good
+function t(a) {
+  console.log(a)
+}
+for (var k = 0; k < 10; k++) {
+  t(k)
+}
+t = null
+```
 
 #### 3、没有清理的 DOM 元素引用
 
@@ -93,11 +117,9 @@ btn.addEventListener('click', onClick)
 - 手动删除定时器和 dom。
 - removeEventListener 移除事件监听
 
-#### 5、子元素存在引用引起的内存泄漏
-
-原因：div 中的 ul li 得到这个 div，会间接引用某个得到的 li，那么此时因为 div 间接引用 li，即使 li 被清空，也还是在内存中，并且只要 li 不被删除，他的父元素都不会被删除。
-
 ### vue 中容易出现内存泄露的几种情况
+
+在 Vue SPA 开发应用，那么就更要当心内存泄漏的问题。因为在 SPA 的设计中，用户使用它时是不需要刷新浏览器的，所以 JavaScript 应用需要自行清理组件来确保垃圾回收以预期的方式生效。因此开发过程中，你需要时刻警惕内存泄漏的问题。
 
 #### 1、全局变量造成的内存泄露
 
@@ -201,4 +223,138 @@ beforeDestroy () {
 
 #### 5、v-if 指令产生的内存泄露
 
-v-if 绑定到 false 的值，但是实际上 dom 元素在隐藏的时候没有被真实的释放掉
+v-if 绑定到 false 的值，但是实际上 dom 元素在隐藏的时候没有被真实的释放掉。
+
+比如下面的示例中，我们加载了一个带有非常多选项的选择框，然后我们用到了一个显示/隐藏按钮，通过一个 v-if 指令从虚拟 DOM 中添加或移除它。这个示例的问题在于这个 v-if 指令会从 DOM 中移除父级元素，但是我们并没有清除由 Choices.js 新添加的 DOM 片段，从而导致了内存泄漏。
+
+```html
+<div id="app">
+  <button v-if="showChoices" @click="hide">Hide</button>
+  <button v-if="!showChoices" @click="show">Show</button>
+  <div v-if="showChoices">
+    <select id="choices-single-default"></select>
+  </div>
+</div>
+
+<script>
+  export default {
+    data() {
+      return {
+        showChoices: true,
+      }
+    },
+    mounted: function () {
+      this.initializeChoices()
+    },
+    methods: {
+      initializeChoices: function () {
+        let list = []
+        // 我们来为选择框载入很多选项，这样的话它会占用大量的内存
+        for (let i = 0; i < 1000; i++) {
+          list.push({
+            label: 'Item ' + i,
+            value: i,
+          })
+        }
+        new Choices('#choices-single-default', {
+          searchEnabled: true,
+          removeItemButton: true,
+          choices: list,
+        })
+      },
+      show: function () {
+        this.showChoices = true
+        this.$nextTick(() => {
+          this.initializeChoices()
+        })
+      },
+      hide: function () {
+        this.showChoices = false
+      },
+    },
+  }
+</script>
+```
+
+在上述的示例中，我们可以用 hide() 方法在将选择框从 DOM 中移除之前做一些清理工作，来解决内存泄露问题。为了做到这一点，我们会在 Vue 实例的数据对象中保留一个属性，并会使用 Choices API 中的 destroy() 方法将其清除。
+
+```js
+<div id="app">
+  <button v-if="showChoices" @click="hide">Hide</button>
+  <button v-if="!showChoices" @click="show">Show</button>
+  <div v-if="showChoices">
+    <select id="choices-single-default"></select>
+  </div>
+</div>
+
+<script>
+  export default {
+    data() {
+      return {
+        showChoices: true,
+        choicesSelect: null
+      }
+    },
+    mounted: function () {
+      this.initializeChoices()
+    },
+    methods: {
+      initializeChoices: function () {
+        let list = []
+        for (let i = 0; i < 1000; i++) {
+          list.push({
+            label: 'Item ' + i,
+            value: i,
+          })
+        }
+         // 在我们的 Vue 实例的数据对象中设置一个 `choicesSelect` 的引用
+        this.choicesSelect = new Choices("#choices-single-default", {
+          searchEnabled: true,
+          removeItemButton: true,
+          choices: list,
+        })
+      },
+      show: function () {
+        this.showChoices = true
+        this.$nextTick(() => {
+          this.initializeChoices()
+        })
+      },
+      hide: function () {
+        // 现在我们可以让 Choices 使用这个引用，从 DOM 中移除这些元素之前进行清理工作
+        this.choicesSelect.destroy()
+        this.showChoices = false
+      },
+    },
+  }
+</script>
+```
+
+### ES6 防止内存泄漏
+
+前面说过，及时清除引用非常重要。但是，你不可能记得那么多，有时候一疏忽就忘了，所以才有那么多内存泄漏。
+
+ES6 考虑到这点，推出了两种新的数据结构： weakset 和 weakmap 。他们对值的引用都是不计入垃圾回收机制的，也就是说，如果其他对象都不再引用该对象，那么垃圾回收机制会自动回收该对象所占用的内存。
+
+```js
+const wm = new WeakMap()
+const element = document.getElementById('example')
+vm.set(element, 'something')
+vm.get(element)
+```
+
+上面代码中，先新建一个 Weakmap 实例。然后，将一个 DOM 节点作为键名存入该实例，并将一些附加信息作为键值，一起存放在 WeakMap 里面。这时，WeakMap 里面对 element 的引用就是弱引用，不会被计入垃圾回收机制。
+
+注册监听事件的 listener 对象很适合用 WeakMap 来实现。
+
+```js
+// 代码1
+ele.addEventListener('click', handler, false)
+
+// 代码2
+const listener = new WeakMap()
+listener.set(ele, handler)
+ele.addEventListener('click', listener.get(ele), false)
+```
+
+代码 2 比起代码 1 的好处是：由于监听函数是放在 WeakMap 里面，一旦 dom 对象 ele 消失，与它绑定的监听函数 handler 也会自动消失
