--- a/javascript/如何解决前端内存泄漏.md
+++ b/javascript/如何解决前端内存泄漏.md
@@ -1,5 +1,7 @@
 # 内存泄漏
 
+最近收到测试人员的反馈说我们开发的页面偶现卡死，点击无反应的情况，特别是打开页面较久的时候发生概率较高。打开任务管理器，看到内存占有率已经很高了，初步判断可能存在内存泄漏的情况。下面排查内存泄漏的原因。
+
 系统进程不再用到的内存，没有及时释放，就叫做内存泄漏（memory leak）。当内存占用越来越高，轻则影响系统性能，重则导致进程崩溃。Chrome 限制了浏览器所能使用的内存极限（64 位为 1.4GB，32 位为 1.0GB）
 
 ### 引起内存泄漏的原因
